# SIO3Pack

./: .gitignore  README.md  pyproject.toml  pytest.ini  setup.cfg  test.py  test.sh
.github/workflows/: arch.yml  check_migrations.yml  docs.yml  formatter.yml  macOS.yml  release.yml  ubuntu.yml
docs/: conf.py  index.rst  sinolpack.rst
example_graphs/: example.json  run.json
example_workflows/: example.json  inwer.json  outgen.json  run.json  simple_run.json  string_regs.json  test_run.json  user_out.json
src/sio3pack/: __init__.py  exceptions.py  util.py  utils.py
src/sio3pack/django/common/: __init__.py  handler.py  models.py
src/sio3pack/django/sinolpack/: __init__.py  handler.py  utils.py  (+1 more)
src/sio3pack/files/: __init__.py  file.py  filetracker_file.py  local_file.py  remote_file.py
src/sio3pack/graph/: __init__.py  graph.py  graph_manager.py  graph_op.py  node.py
src/sio3pack/lua/: __init__.py
src/sio3pack/test/: __init__.py  simple_test.py  test.py
src/sio3pack/utils/: archive.py  classinit.py
src/sio3pack/visualizer/: __init__.py  cytoscope.py
src/sio3pack/workflow/: __init__.py  constants.py  object.py  tasks.py  workflow.py  workflow_manager.py  workflow_op.py
tests/: conftest.py  fixtures.py  utils.py
tests/test_django/: manage.py
tests/test_django/test_django/: asgi.py  settings.py  urls.py  wsgi.py
tests/test_django/test_sio3pack/: test_sinolpack.py
tests/test_packages/custom_workflows/: __init__.py  config.yml  workflows.json
tests/test_packages/encdec/: config.yml  workflows.json
tests/test_packages/extra_files/: __init__.py  config.yml
tests/test_packages/interactive/: config.yml  workflows.json
tests/test_packages/inwer/: __init__.py
tests/test_packages/run/: __init__.py  config.yml
tests/test_packages/simple/: __init__.py  config.yml
tests/workflow/: test_workflow.py
(+26 files in other folders)
