[build-system]
requires = ["setuptools>=67.0"]
build-backend = "setuptools.build_meta"

[tool.isort]
line_length = 120
multi_line_output = 3
include_trailing_comma = true
skip = ["migrations", ".venv"]

[tool.black]
line_length = 120
exclude = "migrations/"

[tool.pytest.ini_options]
addopts = "--import-mode=importlib"
