[metadata]
name = sio3pack
version = attr: sio3pack.__version__
author = Tomasz Kwiatkowski, Mateusz Masiarz, Jakub Rożek, Stanisław Struzik
author_email = t.kwiatkowski@fri.edu.pl, m.masiarz@fri.edu.pl, j.rozek@fri.edu.pl, ss448502@students.mimuw.edu.pl
maintainer = Tomasz Kwiatkowski, Mateusz Masiarz, Jakub Rożek, Stanisław Struzik
maintainer_email = t.kwiatkowski@fri.edu.pl, m.masiarz@fri.edu.pl, j.rozek@fri.edu.pl, ss448502@students.mimuw.edu.pl
description = Library for interacting with packages
long_description = file: README.md
long_description_content_type = text/markdown
project_urls =
    Bug Tracker = https://github.com/sio2project/SIO3Pack/issues
    Homepage = https://github.com/sio2project/SIO3Pack
classifiers =
    Programming Language :: Python :: 3
    License :: OSI Approved :: GNU General Public License v3 (GPLv3)
    Operating System :: OS Independent

[options]
packages = find_namespace:
packages_dir = src
include_package_data = True
python_requires = >=3.9
install_requires =
    PyYAML

[options.packages.find]
where = src

[options.extras_require]
tests =
    pytest
    pytest-cov
    pytest-xdist
    deepdiff
django_tests =
    pytest-django
django =
    django
vis =
    dash
    dash-cytoscape
docs =
    sphinx
    sphinx-autoapi
    furo

[options.entry_points]
console_scripts =
    sio3pack = sio3pack:visualizer.main

[tool:pytest]
testpaths =
    tests
